--- a/WinRun4J/WinRun4J.vcxproj
+++ b/WinRun4J/WinRun4J.vcxproj
@@ -37,7 +37,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B3EC7585-646E-4D0D-850E-8CD6FADB323D}</ProjectGuid>
     <RootNamespace>WinRun4J</RootNamespace>
-    <WindowsTargetPlatformVersion>10</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release - Console|Win32'" Label="Configuration">
@@ -114,41 +114,41 @@
     <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
-    <IntDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
-    <IntDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug - Console|Win32'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug - Console|x64'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release - Console|Win32'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
     <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release - Console|x64'">
-    <OutDir>$(SolutionDir)\build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
-    <IntDir>$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
+    <OutDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)build\$(ProjectName)-$(Configuration)-$(Platform)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <BuildLog>
@@ -432,50 +432,50 @@
     </ManifestResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\common\Dictionary.cpp" />
-    <ClCompile Include="..\src\common\INI.cpp" />
-    <ClCompile Include="..\src\common\Log.cpp" />
-    <ClCompile Include="..\src\common\Runtime.cpp" />
-    <ClCompile Include="..\src\java\Classpath.cpp" />
-    <ClCompile Include="..\src\java\JNI.cpp" />
-    <ClCompile Include="..\src\java\VM.cpp" />
-    <ClCompile Include="..\src\launcher\DDE.cpp" />
-    <ClCompile Include="..\src\launcher\Native.cpp" />
-    <ClCompile Include="..\src\launcher\Service.cpp" />
-    <ClCompile Include="..\src\launcher\Shell.cpp" />
-    <ClCompile Include="..\src\launcher\SplashScreen.cpp" />
-    <ClCompile Include="..\src\launcher\Supervisor.cpp" />
-    <ClCompile Include="..\src\libffi\closures.c" />
-    <ClCompile Include="..\src\libffi\ffi.c" />
-    <ClCompile Include="..\src\libffi\prep_cif.c" />
-    <ClCompile Include="..\src\libffi\types.c" />
-    <ClCompile Include="..\src\WinRun4J.cpp" />
+    <ClCompile Include="src\common\Dictionary.cpp" />
+    <ClCompile Include="src\common\INI.cpp" />
+    <ClCompile Include="src\common\Log.cpp" />
+    <ClCompile Include="src\common\Runtime.cpp" />
+    <ClCompile Include="src\java\Classpath.cpp" />
+    <ClCompile Include="src\java\JNI.cpp" />
+    <ClCompile Include="src\java\VM.cpp" />
+    <ClCompile Include="src\launcher\DDE.cpp" />
+    <ClCompile Include="src\launcher\Native.cpp" />
+    <ClCompile Include="src\launcher\Service.cpp" />
+    <ClCompile Include="src\launcher\Shell.cpp" />
+    <ClCompile Include="src\launcher\SplashScreen.cpp" />
+    <ClCompile Include="src\launcher\Supervisor.cpp" />
+    <ClCompile Include="src\libffi\closures.c" />
+    <ClCompile Include="src\libffi\ffi.c" />
+    <ClCompile Include="src\libffi\prep_cif.c" />
+    <ClCompile Include="src\libffi\types.c" />
+    <ClCompile Include="src\WinRun4J.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\common\Dictionary.h" />
-    <ClInclude Include="..\src\common\INI.h" />
-    <ClInclude Include="..\src\common\Log.h" />
-    <ClInclude Include="..\src\common\Runtime.h" />
-    <ClInclude Include="..\src\java\Classpath.h" />
-    <ClInclude Include="..\src\java\JNI.h" />
-    <ClInclude Include="..\src\java\VM.h" />
-    <ClInclude Include="..\src\launcher\DDE.h" />
-    <ClInclude Include="..\src\launcher\Native.h" />
-    <ClInclude Include="..\src\launcher\Service.h" />
-    <ClInclude Include="..\src\launcher\Shell.h" />
-    <ClInclude Include="..\src\launcher\SplashScreen.h" />
-    <ClInclude Include="..\src\launcher\Supervisor.h" />
-    <ClInclude Include="..\src\WinRun4J.h" />
+    <ClInclude Include="src\common\Dictionary.h" />
+    <ClInclude Include="src\common\INI.h" />
+    <ClInclude Include="src\common\Log.h" />
+    <ClInclude Include="src\common\Runtime.h" />
+    <ClInclude Include="src\java\Classpath.h" />
+    <ClInclude Include="src\java\JNI.h" />
+    <ClInclude Include="src\java\VM.h" />
+    <ClInclude Include="src\launcher\DDE.h" />
+    <ClInclude Include="src\launcher\Native.h" />
+    <ClInclude Include="src\launcher\Service.h" />
+    <ClInclude Include="src\launcher\Shell.h" />
+    <ClInclude Include="src\launcher\SplashScreen.h" />
+    <ClInclude Include="src\launcher\Supervisor.h" />
+    <ClInclude Include="src\WinRun4J.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\WinRun4J.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\src\WinRun4J.rc" />
+    <ResourceCompile Include="src\WinRun4J.rc" />
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\src\libffi\win32.S">
+    <CustomBuild Include="src\libffi\win32.S">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug - Console|Win32'">%(RootDir)%(Directory)\asm.bat %(RootDir)%(Directory) %(Filename) "$(OutDir)"
 </Command>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug - Console|Win32'">$(OutDir)%(Filename).obj;%(Outputs)</Outputs>
@@ -493,7 +493,7 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(OutDir)%(Filename).obj;%(Outputs)</Outputs>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </CustomBuild>
-    <CustomBuild Include="..\src\libffi\win64.S">
+    <CustomBuild Include="src\libffi\win64.S">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug - Console|Win32'">true</ExcludedFromBuild>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug - Console|x64'">%(RootDir)%(Directory)\asm64.bat %(RootDir)%(Directory) %(Filename) "$(OutDir)"
 </Command>
